# Trainer-s-Corner

./: .gitignore  HOW-TO.md  README.md
trainers_corner_frontend/: index.html  package-lock.json  package.json
trainers_corner_frontend/src/: main.ts  style.css
trainers_corner_marketplace_backend/: .env  Cargo.toml  diesel.toml
trainers_corner_marketplace_backend/migrations/2025-02-12-061307_create_cards/: up.sql
trainers_corner_marketplace_backend/migrations/2025-02-12-063037_add_card_fields/: down.sql  up.sql
trainers_corner_marketplace_backend/src/: main.rs  models.rs  schema.rs
